# HIWI_Programming_Robots

./: .gitignore  README.md  task6.mkv
Simple_example/: FEpVrepRobot.m  checkquadprog.m  main.m  task2.m
Task7/: README.md  task7_pinocchio.cpp
Task7/task7_AIK/: CMakeLists.txt  franka_ik_He.hpp  task7_AIK.cpp
Task7/task7_pinocchio/: CMakeLists.txt  task7_pinocchio.cpp
Task8/: CMakeLists.txt  task8.cpp
Task9/: CMakeLists.txt  task9.cpp
catkin_ws/: joint_pose_log.csv  list_torques_read.csv  list_torques_ref.csv  task4.m
catkin_ws/src/dqpanda/: CMakeLists.txt  package.xml
catkin_ws/src/dqpanda/src/: pose_control.cpp  task3.cpp  task5.cpp  task_3_4.cpp
catkin_ws/src/franka_description/robots/panda/: panda.urdf
catkin_ws/src/task7/: CMakeLists.txt  package.xml  task7_pinocchio.cpp
mujoco-2.3.5/task6/: makefile  one_leg.cc  task6.cc  task6.cpp
